--- a/static/html-external-css.html
+++ b/static/html-external-css.html
@@ -3,7 +3,7 @@
 <head>
 	<title>External CSS</title>
 	<!-- external Css-->
-	<link rel="stylesheet" href="styles.css" >
+	<link rel="stylesheet" href="st2.css">
 </head>
 <body>
 
