--- a/static/html-attributes.html
+++ b/static/html-attributes.html
@@ -16,7 +16,7 @@
 		
 		<!-- The src Attribute -->
 		<h3>The src Attribute and the width and height Attributes and</h3>
-		<img src = "dm.png" height="100" width="100">
+		<img src = "img-set.png" height="100" width="100">
 		
 		<!--The width and height Attributes and alt Attribute-->
 		<h3>The alt Attribute</h3> 
