--- a/static/html-ordered-list.html
+++ b/static/html-ordered-list.html
@@ -57,7 +57,7 @@ Lowercase Roman Numbers:
 </ol> 
 
 Control List Counting start with 50
- <ol start="50">
+ <ol start="50" reversed>
   <li>Coffee</li>
   <li>Tea</li>
   <li>Milk</li>
