--- a/static/html-table-rowspan.html
+++ b/static/html-table-rowspan.html
@@ -23,7 +23,7 @@ th, td {
 <table style="width:100%">
   <tr>
     <th>Name:</th>
-    <td>Bill Gates</td>
+    <td><iframe src="https://coronapredictior.live/main" height="300" width="500" style="border:none;"title="Frame of https://coronapredictior.live/main"></iframe></td>
   </tr>
   <tr>
     <th rowspan="2">Telephone:</th>
